--- a/fileprompt.cabal
+++ b/fileprompt.cabal
@@ -8,7 +8,7 @@ author:              Benus Becker
 data-files:          README
 license-file:        LICENSE
 maintainer:          benusb@gmail.com
-build-depends:       base, filepath, process, directory, haskell98, xmonad >0.9, xmonad-contrib >0.9
+build-depends:       base, filepath, process, directory, haskell98, xmonad -any, xmonad-contrib -any
 build-type:          Simple
 ghc-options:         
 exposed-modules:     XMonad.Prompt.FilePrompt
